# COMP2510_Summary

./: CMakeLists.txt  main.c
Lecture_01/: lecture01.c
Lecture_02/: lecture02.c  lecture02exercises.c
Lecture_03/: lecture03.c  lecture03exercises.c
Lecture_04/: lecture04.c  lecture04exercises.c  lecture04flawedcode.c
