cmake_minimum_required(VERSION 3.26)
project(midtermTesting C)

set(CMAKE_C_STANDARD 11)

add_executable(midtermTesting
        main.c)
add_executable(lecture01 Lecture_01/lecture01.c)
add_executable(lecture02 Lecture_02/lecture02.c)
add_executable(lecture02exercises Lecture_02/lecture02exercises.c)
